--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,10 @@ author:
   name             : "Ruiqi Cheng"
   pronouns         : # example: "she/her"  
   bio              : "I am a Ph.D. candidate at the Pie-Lab, Beijing Institute of Technology."
-  location         : "Beijing-China"
+  location         : "Beijing, China"
   employer         : "Beijing Institute of Technology"
   uri              : # URL
-  email            : "chengrui7@bit.edu.cn" 
+  email            : chengrui7@bit.edu.cn
 
   # Academic websites
   academia         : # URL
@@ -46,7 +46,7 @@ author:
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "https://github.com/reachel1"
+  github           : "reachel1"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
