--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default"
-title                    : "Ruiqi Cheng"
+title                    : "Ruiqi Cheng/Homepage"
 title_separator          : "-"
 name                     : &name "Ruiqi Cheng"
 description              : &description "Ph.D. student at BIT, working on Radar perception and SLAM."
-url                      : https://reachel1.github.io/  # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : "https://reachel1.github.io"  # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io" or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "reachel1/reachel1.github.io"
 
