--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ author:
   location         : "Beijing, China"
   employer         : "Beijing Institute of Technology"
   uri              : # URL
-  email            : chengrui7@bit.edu.cn
+  email            : "chengrui7@bit.edu.cn"
 
   # Academic websites
   academia         : # URL
